# DarkSoulsTheBoardGameApp

./: README.md  backend.Dockerfile  docker-compose.yaml  frontend.Dockerfile
backend/: .gitignore  app.py  poetry.toml  pyproject.toml
backend/database/: MongoDBSingleton.py
frontend/: package-lock.json  package.json
frontend/src/: App.js  constants.js  index.js
frontend/src/components/pages/: CampaignsPage.jsx  CardPage.jsx  CharactersPage.jsx  ExpansionsPage.jsx  HomePage.jsx  MainPage.jsx  Navbar.jsx
