[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "MBigaj",email = "mikolaj.bigaj.00@gmail.com"}
]
readme = "README.md"
requires-python = ">3.9"
dependencies = [
    "fastapi[standard] (>=0.115.11,<0.116.0)",
    "pymongo (>=4.11.2,<5.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
