[project]
name = "dstbg"
version = "0.1.0"
description = "Dark Souls the Board Game Backend"
authors = [
    {name = "MBigaj",email = "mikolaj.bigaj.00@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi[standard] (>=0.123.0,<0.124.0)",
    "pymongo (>=4.15.4,<5.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "newrelic (>=11.1.0,<12.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
